@@ -10,9 +10,9 @@
 {% if error_message %}
     <div class="error">{{ error_message }}</div>
 {% else %}
-Downloading of <b>{{ download_product.product_name }}</b> will commence after clicking the link below:
+{% trans 'Downloading of' %} <b>{{ download_product.product_name }}</b> {% trans 'will commence after clicking the link below:' %}
 <p><a href = "{{dl_url}}"> {{download_product.downloadable_product.product.name}} </a></p>
-<p>Once you click the link, the download will be counted.  If you have trouble with the download, please refresh your
-browser and try the download again</p>
+<p>{% trans 'Once you click the link, the download will be counted.  If you have trouble with the download, please refresh your
+browser and try the download again' %}</p>
 {% endif %}
 {% endblock %}
